--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -3,3 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+button {
+  border: none;
+  padding: none;
+  background: none;
+  cursor: pointer;
+}
