--- a/src/shared/ui/Layout/ui/Layout.module.scss
+++ b/src/shared/ui/Layout/ui/Layout.module.scss
@@ -1,4 +1,35 @@
-.Layout{
+.LayoutApp{
     display: flex;
+    padding: 20px;
     height: 100vh;
+    gap: 20px;
+}
+
+.LayoutPage{
+    position: relative;
+    border-radius: 25px;
+    width: 100%;
+    height:100%;
+    background-color: var(--white);
+}
+
+
+$sticky-header-height: 94px;
+
+
+.LayoutPageHeader{
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--black-buttons-back);
+    padding: 0 30px;
+    width: 100%;
+    height: $sticky-header-height;
+}
+
+.LayoutPageContent{
+    position:absolute;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 10px 30px;
+    inset:$sticky-header-height 0 0 0;
 }
