--- a/src/app/styles/vars.css
+++ b/src/app/styles/vars.css
@@ -17,5 +17,7 @@
     --black-blue: #214ECC;
     --black-main: #1E1E1E;
     --black-buttons-back: rgb(30 30 30 / 7%);
+    --background-color-schedule: #EEF3FF;
     --black-translucent-subtitle: rgb(30 30 30 / 60%);
+    --black-stroke-translucent: #E4E4E4;
 }
