--- a/src/shared/ui/Dropdown/ui/Dropdown.module.scss
+++ b/src/shared/ui/Dropdown/ui/Dropdown.module.scss
@@ -2,29 +2,14 @@
 
 }
 
-.menuWrapper {
-    position: relative;
-    perspective: 2000px;
+.label {
+    font-weight: 600;
+    font-size: var(--fz);
+    letter-spacing: 0;
 }
-  
-.subMenu {
-    position: absolute;
-    top: 30px;
-    z-index: 100000000;
-    border-radius: 6px;
-    padding: 15px;
-    background-color: #ccc;
-    transform-origin: 50% -30px;
-}
-  
 
-  
-.subMenuContainer {
+.optRender{
+    &:hover {
+        background: var(--accent);
+    }
 }
-  
-.subMenuItem {
-    margin-bottom: 5px;
-    cursor: pointer;
-    pointer-events: all;
-}
-  
