--- a/src/shared/ui/Select/ui/Select.module.scss
+++ b/src/shared/ui/Select/ui/Select.module.scss
@@ -3,9 +3,12 @@
 }
 
 .label {
+    overflow: hidden;
     font-weight: 600;
     font-size: var(--fz);
     letter-spacing: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .optRender{
