--- a/src/widgets/UserProfile/ui/UserProfile.module.scss
+++ b/src/widgets/UserProfile/ui/UserProfile.module.scss
@@ -6,4 +6,39 @@
     width: 100%;
     height: 73px;
     background-color: var(--white);
+    cursor: pointer;
+}
+
+.wrapper{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    
+}
+
+.userInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    .userInfoGroup{
+        font-weight: 600;
+        color: var(--black-translucent-subtitle);
+    }
+
+    .userInfoFIO{
+        font-weight: 600;
+    }
+}
+
+.avatar{
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;
+
+    img, svg {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
