--- a/src/widgets/UserProfile/ui/UserProfile.module.scss
+++ b/src/widgets/UserProfile/ui/UserProfile.module.scss
@@ -6,8 +6,13 @@
     width: 100%;
     height: 73px;
     background-color: var(--white);
+    
+}
+
+.UserProfile.small {
     cursor: pointer;
 }
+
 
 .wrapper{
     display: flex;
@@ -20,12 +25,12 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-
+    
     .userInfoGroup{
         font-weight: 600;
         color: var(--black-translucent-subtitle);
     }
-
+    
     .userInfoFIO{
         font-weight: 600;
     }
@@ -35,10 +40,46 @@
     flex-shrink: 0;
     width: 50px;
     height: 50px;
-
+    
     img, svg {
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+}
+
+.big {
+    .avatar {
+        width: 117px;
+        height: 117px;
+    }
+
+    .wrapper {
+        gap: 20px;
+    }
+
+    .userInfo {
+        gap: 8px;
+    }
+
+    .userInfoFIO{
+        font-size: var(--fz-l);
+    }
+
+    .controls {
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
+        gap: 15px;
+
+        button {
+            width: max-content;
+        }
+    }
+
+    .select{
+        & > div {
+            width: max-content;
+        }
     }
 }
