--- a/src/app/styles/vars.css
+++ b/src/app/styles/vars.css
@@ -22,5 +22,6 @@
     --black-input-back: rgb(30 30 30 / 2%);
     --background-color-schedule: #EEF3FF;
     --black-translucent-subtitle: rgb(30 30 30 / 60%);
+    --black-translucent-subtitle2: #787878;
     --black-stroke-translucent: #E4E4E4;
 }
