--- a/src/shared/ui/PageLoader/PageLoader.module.scss
+++ b/src/shared/ui/PageLoader/PageLoader.module.scss
@@ -6,18 +6,44 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    mask: radial-gradient(farthest-side, #0000 calc(100% - 2px), #000 0); 
-    border-radius: 50%;
-    width: 16px; 
-    height: 16px;
-    background: 
-        radial-gradient(farthest-side, var(--white) 94%, #0000) top/2px 2px no-repeat, /* Изменено значение размера градиента */
-        conic-gradient(#0000 30%, var(--white));
+    width: max-content;
     transform: translate(-50%, -50%);
-    animation: l13 1s infinite linear;
-    aspect-ratio: 1;
 }
 
-@keyframes l13{ 
-    100%{transform: translate(-50%, -50%) rotate(1turn)}
+.gradientBorder {
+    --border-width: 3px;
+
+    position: relative;
+    border-radius: var(--border-width);
+    background: transparent;
+}
+
+.gradientBorder::after {
+    content: '';
+    position: absolute;
+    left: calc(-1 * var(--border-width));
+    top: calc(-1 * var(--border-width));
+    z-index: -1;
+    border-radius: calc(4 * var(--border-width));
+    width: calc(100% + var(--border-width) * 1);
+    height: calc(100% + var(--border-width) * 1);
+    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+    background-size: 300% 300%;
+    filter: blur(50px);
+    animation: animatedgradient 3s ease alternate infinite;
+}
+  
+  
+@keyframes animatedgradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
 }
