--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,8 +4,21 @@
 @import '../../shared/assets/fonts/fonts.css';
 @import './mixins';
 
+* {
+    &::-webkit-scrollbar {
+        width: 5px;
+        height: 3px;
+        background-color: var(--white);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: var(--black-stroke-translucent);
+    }
+}
+
 html {
-    font-family: var(--ff);
+    font-family: var(--ff) !important;
     font-weight: var(--fw);
     font-size: var(--fz);
 }
@@ -343,48 +356,189 @@ body {
     }
 }
 
+/* SCHEDULE */
+.myFullCalendar {
+    font-family: var(--ff) !important;
+
+    .fc .fc-col-header-cell-cushion {
+        font-weight: 600;
+        font-size: 1rem;
+        text-transform: uppercase;
+        color: var(--black-main);
+    }
+
+    // внешние рамки
+    .fc-scrollgrid {
+        border-top-color: transparent !important;
+    }
+
+    .fc-theme-standard td, .fc-theme-standard th {
+        border-color: var(--black-stroke-translucent) !important;
+
+    }
+
+    .fc-scrollgrid td:last-of-type {
+        border-right-color: var(--black-stroke-translucent) !important;
+    }
+
+    .fc-scrollgrid-section.fc-scrollgrid-section-body
+        td[role='presentation'] {
+        border-bottom-color: var(--black-stroke-translucent) !important;
+    }
+
+    [role='row']:last-of-type td {
+        border-bottom-color: var(--black-stroke-translucent) !important;
+    }
+
+    th[role='presentation'] {
+        border-right-color: var(--black-stroke-translucent) !important;
+    }
+
+    
+
+    .fc-theme-standard .fc-list-day-cushion{
+        // background: #ededed52;
+    }
+
+    // элементы управления
+    .fc-header-toolbar.fc-toolbar{
+        @media (width <= 800px) {
+            width: 100vw;
+        }
+    }
+
+    .fc-header-toolbar.fc-toolbar.fc-toolbar-ltr{
+        // display: flex;
+        // justify-content: center;
+        // font-size: 10px;
+
+        // .fc-toolbar-chunk:nth-child(1), .fc-toolbar-chunk:nth-child(3){
+        //     display: none;
+        // }
+        display: none;
+    }
+
+    .fc .fc-list-empty{
+        background: white;
+
+    }
+
+    .fc-v-event .fc-event-main{
+        color: unset !important;
+    }
+
+    .fc-event{
+        cursor: pointer;
+    }
+
+    .fc-timeGridWeek-view, .fc-timeGridDay-view{
+        .fc-event{
+            padding: 10px;
+
+            // TODO: potentially bred
+            min-height: 63px;
+        }
+
+        .fc-event-time{
+            font-weight: 600;
+            font-size: var(--fz-s);
+        }
+    
+        .fc-event-title-container{
+            display: flex;
+            flex-shrink: 0;
+            flex-direction: column;
+            justify-content: flex-end;
+        }
+    }
+    
+
+    .fc-theme-standard .fc-list{
+        border: none;
+    }
+
+    // внутрениие рамки
+    // .fc-theme-standard td,
+    // .fc-theme-standard th {
+    // }
+
+   
+
+    // события
+    .fc-daygrid-day-events{ 
+        display: flex;
+        flex-direction: column;
+        padding:  0 5px;
+        gap: 5px;
+
+        .fc-daygrid-event-harness{
+
+        }
+    }
+
+    .fc-day-today{
+        // today cell
+        background: transparent !important;
+
+        .fc-daygrid-day-number{
+            font-weight: 600;
+            color: var(--accent);
+        }
+    }
+
+    .fc-daygrid-event-dot{
+        display: none;
+    }
+    
+}
 
 /* SCHEDULE TOOLTIP */
 .event-desc {
     z-index: 10;
+    border: 1px solid var(--black-stroke-translucent);
     border-radius: 15px;
-    padding: 13px;
-    width: 170px;
+    padding: 15px;
+    width: 242px;
     height: min-content;
+    font-weight: 500;
     font-size: var(--fz-s);
-    background: #e1ecf9;
+    background: var(--white);
   
     &__date {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 5px;
-
-      .date {
-        font-weight: bold;
-      }
+      margin-bottom: 12px;
 
       .time {
+        font-weight: 600;
       }
+    }
+    
+    &__typeAndRoom {
+        margin-bottom: 6px;
+        color: var(--black-translucent-subtitle);
     }
   
     &__title {
-      margin-bottom: 8px;
-      font-weight: bold;
-      color: var(--accent);
+      margin-bottom: 15px;
+      font-weight: 600;
+      font-size: 1rem;
+      color: var(--black-main);
     }
   
     .info {
+        margin-bottom: 20px;
+
       .li {
         display: flex;
         align-items: center;
-        font-weight: bold;
+        margin-bottom: 12px;
+        font-size: var(--fz-s);
 
         .marker {
-          margin-right: 5px;
-          font-size: 1.5rem;
+          margin-right: 8px;
 
           &_yellow {
-            color: #ffbb0b;
+            // TODO: make var
+            color: #FF6F00;
           }
 
           &_green {
@@ -397,4 +551,60 @@ body {
         }
       }
     }
+
+    &__button{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        padding: 11px 18px;
+        width: 100%;
+        font-weight: 600;
+        text-decoration: none;
+        color: var(--white);
+        background-color: var(--black-main);
+        cursor: pointer;
+        
+        &_do {
+            margin-bottom: 5px;
+            color: var(--white);
+            background: var(--accent);
+        }
+    }
+  }
+
+
+  /* CHANGE ANTD SEGMENTED */
+  .mySegmented {
+    font-family: var(--ff);
+
+      &.ant-segmented{
+        border-radius: 12px !important;
+        background: var(--black-buttons-back);
+
+        .ant-segmented-group{
+            border-radius: 12px !important;
+            gap: 5px;
+
+            .ant-segmented-item {
+                border-radius: 8px !important;
+                font-weight: 600;
+                line-height: unset !important;
+                color: var(--black-main);
+
+                .ant-segmented-item-label{
+                    border-radius: 8px !important;
+                    padding: 13px 19px !important;
+                    line-height: unset !important;
+                }
+
+                &.ant-segmented-item-selected{
+                    .ant-segmented-item-label{
+                        color: var(--white) !important;
+                        background-color: var(--black-main) !important;
+                    }
+                }
+            }
+        }
+      }
   }
