--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -266,10 +266,15 @@ body {
     }
 
     .ant-tabs-nav-list{
+        width: 99%; // we don't do 100% because of antd tab flickering issue (https://github.com/ant-design/ant-design/issues/43541)
         gap: 24px;
 
         
     }
+
+    .ant-tabs-nav-operations {
+        display: none !important; // flickering issue (https://github.com/ant-design/ant-design/issues/43541)
+        }
 
     .ant-tabs-tab-active{
         div {
@@ -282,6 +287,7 @@ body {
         position: relative;
         margin: 0 !important;
         padding: 0 !important;
+        width: 100%;
         font-weight: 500 !important;
         font-size: var(--fz-l);
         line-height: 1.272em;
@@ -607,4 +613,24 @@ body {
             }
         }
       }
+  }
+
+  /* ANTD COLLAPSED */
+
+  .myCollapse {
+    .ant-collapse {
+        border: none !important;
+        background: none !important;
+    }
+
+    .ant-collapse-content{
+        border: none !important;
+    }
+
+    .ant-collapse-content-box{
+        border: 1px solid rgb(#1E1E1E, .2);
+        border-top: none !important;
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 20px;
+    }
   }
