--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -61,6 +61,26 @@
     }
 }
 
+.withIcon.purposeDelete {
+    border-color: var(--red);
+    color: var(--red);
+
+    &:hover {
+        color: var(--white);
+        background-color: var(--red);
+
+        svg {
+            stroke: var(--white);
+        }
+    }
+
+    &:active {
+        svg {
+            stroke: var(--white);
+        }
+    }
+}
+
 .pressed.loading {
     color: transparent; // to avoid btn height "jumping"
     background-color: var(--black-translucent-subtitle);
