--- a/src/shared/ui/Cards/HomeworkCard/ui/HomeworkCard.module.scss
+++ b/src/shared/ui/Cards/HomeworkCard/ui/HomeworkCard.module.scss
@@ -72,21 +72,44 @@
     border-radius: 10px;
     width: 100%;
     height: 37px;
-    font-weight: 500;
+    font-weight: 600;
+    font-size: var(--fz-s);
+    gap: 8px;
 
     &.less100 {
         color: #319E4A;
         background: #E7F8EB;
+
+        svg {
+            stroke: #319E4A;
+        }
     }
 
     &.less75 {
         color: #DC491B;
         background: #F4511E;
+
+        svg {
+            stroke: #DC491B;
+        }
     }
 
     &.less40 {
         color: #D72727;
         background: rgba(#EF2B2B, 0.12);
+
+        svg {
+            stroke: #D72727;
+        }
+    }
+    
+    &.deadlineGone {
+        color: var(--black-translucent-subtitle);
+        background: var(--black-buttons-back);
+
+        svg {
+            stroke: var(--black-translucent-subtitle);
+        }
     }
 }
 
