comments widget partly

--- a/src/features/ChatBubble/ui/ChatBubble.module.scss
+++ b/src/features/ChatBubble/ui/ChatBubble.module.scss
@@ -1,48 +1,14 @@
 .Reaction{
     position: relative;
-}
-
-.pickerWrapper {
-    position: absolute;
-}
-
-
-
-.heart {
     display: flex;
     align-items: center;
     font-weight: 600;
     gap: 5px;
 
     svg {
-        transition: .5s ease-in-out;
-        cursor: pointer;
-
-        &:hover {
-            fill: #E91E63;
-            
-        }
+        fill: transparent;
+        transition: .2s ease-in-out
     }
-
 }
 
-.liked {
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-    gap: 5px;
-}
 
-.reactWrapper{
-    border-radius: 40px;
-    padding: 3px 8px;
-    color: var(--black-main);
-    background: var(--black-buttons-back);
-}
-
-.meReacted{
-    .reactWrapper{
-        color: var(--white);
-        background: var(--accent);
-    }    
-}
