--- a/src/app/styles/ckeditor.scss
+++ b/src/app/styles/ckeditor.scss
@@ -315,6 +315,11 @@
 /* @ckeditor/ckeditor5-list/theme/list.css */
 .ck-content ol {
     list-style-type: decimal;
+    margin: .7em 0;
+
+    li {
+        margin: 0 1.5em;
+    }
 }
 
 /* @ckeditor/ckeditor5-list/theme/list.css */
@@ -340,7 +345,13 @@
 /* @ckeditor/ckeditor5-list/theme/list.css */
 .ck-content ul {
     list-style-type: disc;
+    margin: .7em 0;
+
+    li {
+        margin: 0 1.5em;
+    }
 }
+
 
 /* @ckeditor/ckeditor5-list/theme/list.css */
 .ck-content ul ul {
