--- a/src/pages/SingleTaskPage/ui/SingleTaskPage.module.scss
+++ b/src/pages/SingleTaskPage/ui/SingleTaskPage.module.scss
@@ -1,8 +1,55 @@
 .TaskPage{
-    
+    position: relative;
 }
 
 .headerBtn{
     flex-shrink: 0;
     width: max-content;
+}
+
+.top {
+    display: flex;
+    gap: 10px;
+
+    .subject {
+        font-weight: 600;
+    }
+
+    .date {
+        font-weight: 600;
+        color: var(--black-translucent-subtitle);
+    }
+}
+
+.title {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    font-weight: 600;
+    font-size: var(--fz-l);
+}
+
+.deadline {
+    position: absolute;
+    right: 30px;
+    top: 16px;
+    padding: 0 20px;
+    width: max-content;
+}
+
+.content {
+    overflow-wrap: anywhere;
+}
+
+.filesWrapper{
+    margin: 25px 0 15px;
+}
+
+.controls {
+    display: flex;
+    align-items: center;
+    gap: 22px;
+}
+
+.comments {
+    margin: 30px 0;
 }
