--- a/src/shared/ui/Cards/HomeworkCard/ui/HomeworkCard.module.scss
+++ b/src/shared/ui/Cards/HomeworkCard/ui/HomeworkCard.module.scss
@@ -21,7 +21,7 @@
 
 .block{
     display: grid;
-    grid-template-rows: 30px 22px 45px 85px 43px 30px;
+    grid-template-rows: 30px 22px 45px 85px 50px 30px;
     padding: 15px;
     height: 100%;
     box-sizing: border-box;
@@ -54,73 +54,22 @@
         color: var(--black-main);
     }
 
-    @media (width <= 700px) {
-        grid-template-rows: 28px 35px 40px 65px 40px;
-        padding: 10px 12px;
-    }
+    // @media (width <= 700px) {
+    //     grid-template-rows: 28px 35px 40px 65px 40px;
+    //     padding: 10px 12px;
+    // }
 
-    @media (width <= 375px) {
-        grid-template-rows: 28px 35px 40px 35px 8px;
-        padding: 10px 12px;
-    }
-}
-
-.deadline{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    width: 100%;
-    height: 37px;
-    font-weight: 600;
-    font-size: var(--fz-s);
-    gap: 8px;
-
-    &.less100 {
-        color: #319E4A;
-        background: #E7F8EB;
-
-        svg {
-            stroke: #319E4A;
-        }
-    }
-
-    &.less75 {
-        color: #DC491B;
-        background: #F4511E;
-
-        svg {
-            stroke: #DC491B;
-        }
-    }
-
-    &.less40 {
-        color: #D72727;
-        background: rgba(#EF2B2B, 0.12);
-
-        svg {
-            stroke: #D72727;
-        }
-    }
-    
-    &.deadlineGone {
-        color: var(--black-translucent-subtitle);
-        background: var(--black-buttons-back);
-
-        svg {
-            stroke: var(--black-translucent-subtitle);
-        }
-    }
+    // @media (width <= 375px) {
+    //     grid-template-rows: 28px 35px 40px 35px 8px;
+    //     padding: 10px 12px;
+    // }
 }
 
 .controls{
     display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
+    align-items: center;
+    gap: 22px;
 
 
-    .reactions {
-        
-        
-    }
+    
 }
