--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -90,6 +90,7 @@ body {
     .ant-select{
         width: 155px;
         height: 40px;
+        font-family: var(-ff) !important;
     }
 
     .ant-select-selection-search{
