--- a/src/pages/SchedulePage/ui/SchedulePage.module.scss
+++ b/src/pages/SchedulePage/ui/SchedulePage.module.scss
@@ -17,7 +17,7 @@
     padding: 10px 15px;
     font-weight: 600;
     font-size: 1rem;
-    line-height: unset;
+    line-height: 1;
     background: var(--black-buttons-back);
 }
 
