--- a/src/shared/ui/EmptyData/ui/EmptyData.module.scss
+++ b/src/shared/ui/EmptyData/ui/EmptyData.module.scss
@@ -2,6 +2,7 @@
     position: absolute;
     left: 50%;
     top: 50%;
+    text-align: center;
     color: var(--black-translucent-subtitle2);
     transform: translate(-50%, -50%);
 }
