--- a/src/pages/ProfilePage/tabs/FavoriteTab/FavoriteTab.module.scss
+++ b/src/pages/ProfilePage/tabs/FavoriteTab/FavoriteTab.module.scss
@@ -1,3 +1,23 @@
+@import '../../../../app/styles/mixins';
+
+
 .FavoriteTab{
     
+}
+
+.newsWrapper{
+    display: grid;
+    gap: 25px;
+}
+
+.homeworkWrapper{
+    display: grid;
+    grid-gap: 28px;
+    grid-template-columns: repeat(auto-fit, 228px);
+  
+
+    @include moreThan(xxl) {
+        justify-content: space-between;
+        grid-gap: 20px;
+    }
 }
