--- a/src/widgets/Modals/GuideModal/ui/GuideModal.module.scss
+++ b/src/widgets/Modals/GuideModal/ui/GuideModal.module.scss
@@ -1,3 +1,76 @@
 .GuideModal{
+    position: relative;
+}
+
+.dots {
+    position: absolute;
+    left: 30px;
+    bottom: 30px;
+    width: 100px;
+
+    .steps{
     
+    }
+}
+
+.stepWrapper{
+    .stepImage {
+        position: relative;
+        margin-bottom: 35px;
+        border-radius: 10px;
+        width: 100%;
+        height: 340px;
+        background-color: var(--black-main);
+
+        img {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            border-radius: 5px;
+            width: 80%;
+            height: 90%;
+            object-fit: cover;
+            transform: translate(-50%, -50%);
+        }
+    }
+
+    .titleWrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .stepTitle {
+            margin-bottom: 12px;
+            font-weight: 600;
+            font-size: var(--fz-l);
+        }
+
+        .label {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 10px;
+            padding: 8px 22px;
+            font-weight: 600;
+            color: var(--black-blue);
+            background: var(--background-color-schedule);
+        }
+    }
+}
+
+.text {
+    max-width: 70%;
+    font-weight: 600;
+    line-height: 1.5;
+}
+
+.controls {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 50px;
+    gap: 15px;
+
+    button {
+        width: max-content;
+    }
 }
