--- a/src/shared/ui/Layout/ui/Layout.module.scss
+++ b/src/shared/ui/Layout/ui/Layout.module.scss
@@ -7,9 +7,11 @@
 
 .LayoutPage{
     position: relative;
+    flex: 1;
     border-radius: 25px;
     width: 100%;
     height:100%;
+    min-width: 0;
     background-color: var(--white);
 }
 
