add real time notifications

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -673,3 +673,9 @@ body {
         border-bottom-left-radius: 20px;
     }
   }
+
+
+  /* antd notifications */
+  .ant-notification-notice-icon {
+    top: 25px;
+  }
