--- a/src/widgets/Modals/ProfileModals/AddAndEditModal/ui/AddAndEditModal.module.scss
+++ b/src/widgets/Modals/ProfileModals/AddAndEditModal/ui/AddAndEditModal.module.scss
@@ -36,3 +36,9 @@
     justify-content: space-between;
     margin-bottom: 25px;
 }
+
+.controls {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
