--- a/src/shared/ui/UserWithAvatar/ui/UserWithAvatar.module.scss
+++ b/src/shared/ui/UserWithAvatar/ui/UserWithAvatar.module.scss
@@ -6,9 +6,11 @@
 
 .avatar{
     flex-shrink: 0;
+    overflow: hidden;
+    border-radius: 50%;
     width: 23px;
     height: 23px;
-    
+
     img, svg {
         width: 100%;
         height: 100%;
