--- a/src/app/styles/vars.css
+++ b/src/app/styles/vars.css
@@ -13,8 +13,10 @@
     /* colors */
     --bg-main: #F3F5FB;
     --accent: #2962FF;
+    --attention: #FFA000;
     --white: #FFF;
     --red: #EF2B2B;
+    --green: #319E4A;
     --red-input-back:rgb(239 43 43 / 2%);
     --black-blue: #214ECC;
     --black-main: #1E1E1E;
