--- a/src/pages/TaskPage/ui/TaskPage.module.scss
+++ b/src/pages/TaskPage/ui/TaskPage.module.scss
@@ -11,7 +11,7 @@
   
 
     @include moreThan(xxl) {
-        justify-content: space-between;
+        // justify-content: space-between;
         grid-gap: 20px;
     }
 }
