--- a/src/app/styles/mixins.scss
+++ b/src/app/styles/mixins.scss
@@ -6,7 +6,8 @@ $breakpoints: (
     md: 768px,
     lg: 992px,
     xl: 1200px,
-    xxl: 1400px
+    xxl: 1400px,
+    xxxl: 1800px,
 );
 
 @mixin moreThan($breakpoint) {
@@ -23,7 +24,7 @@ $breakpoints: (
 
 @mixin lessThan($breakpoint) {
     @if map-has-key($breakpoints, $breakpoint) {
-        @media (min-width: map-get($breakpoints, $breakpoint)) {
+        @media (max-width: map-get($breakpoints, $breakpoint)) {
             @content;
         }
     }
