--- a/src/pages/ProfileSettingsPage/components/UserAvatars/UserAvatars.module.scss
+++ b/src/pages/ProfileSettingsPage/components/UserAvatars/UserAvatars.module.scss
@@ -58,4 +58,61 @@
             }
         }
     }
+
+    .unavailableAvatar{
+        position: relative;
+        display: flex;;
+        flex-shrink: 0;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        border: 4px solid transparent;
+        border-radius: 50%;
+        width: 90px;
+        height: 90px;
+        box-sizing: border-box;
+        transition: .2s ease-in-out;
+        cursor: pointer;
+
+        &::before {
+            content: '';
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            border-radius: 50%;
+            width: 90px;
+            height: 90px;
+            box-sizing: border-box;
+            background: rgba(#1E1E1E, 0.6);
+            transform: translate(-50%, -50%);
+            transition: .2s ease-in-out;
+            
+        }
+
+        .lock {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+
+
+        }
+
+        img {
+            border-radius: 50%;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: .2s ease-in-out;
+        }
+
+        &:hover {
+            img {
+                width: 120%;
+                height: 120%;
+            }
+        }
+
+        
+    }
 }
