--- a/src/pages/ProfilePage/tabs/ProfileTab/ProfileTab.module.scss
+++ b/src/pages/ProfilePage/tabs/ProfileTab/ProfileTab.module.scss
@@ -1,3 +1,10 @@
 .ProfileTab{
     
 }
+
+.statsWrapper{
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    margin-top: 34px;
+    gap: 20px;
+}
