--- a/src/widgets/Modals/HomeworkTaskModal/ui/HomeworkTaskModal.module.scss
+++ b/src/widgets/Modals/HomeworkTaskModal/ui/HomeworkTaskModal.module.scss
@@ -30,10 +30,17 @@
 }
 
 .title {
+    display: flex;
     margin-top: 20px;
     margin-bottom: 30px;
     font-weight: 600;
     font-size: var(--fz-l);
+    gap: 8px;
+
+    button {
+        padding: 5px 7px;
+        width: max-content;
+    }
 }
 
 
