--- a/src/widgets/ScrumTable/ui/ScrumTable.module.scss
+++ b/src/widgets/ScrumTable/ui/ScrumTable.module.scss
@@ -19,7 +19,8 @@
     }
 
     .column {
-        display: grid;
+        display: flex;
+        flex-direction: column;
         padding: 14px;
         height: calc(100vh - 177px);
         gap: 15px
